--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Database</title>
+    <link rel="icon" href="https://png.pngtree.com/png-clipart/20190705/original/pngtree-hotel-icon-for-personal-and-commercial-use-png-image_4341927.jpg" type="image/png" />
+    <title>Paradise Cove</title>
   </head>
   <body>
     <div id="root"></div>
